# testCMakeTOS7

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  torizonPackages.json
.conf/: metadata.json
